# g60_robot

./: .gitignore  .impl_checkpoint.md  .impl_checkpoint_TEMPLATE.md  CLAUDE.md  README.md  STL_LOADING_ISSUE_SUMMARY.md  TEST_ROBOT_CATALOG.md  TEST_STL_DEBUG.md  test_package_loading.py  test_stl_loading.py  test_ui_stl_loading.bat  verify_stl_setup.py
.claude/: settings.local.json
config/: robot_config.yaml  ui_config.json
docs/: 00_MASTER_ROADMAP.md  01_ARCHITECTURE_OVERVIEW.md  ADDING_NEW_ROBOT_FROM_ROS_INDUSTRIAL.md  FEATURE_LIST.md  FEATURE_VERIFICATION_REPORT.md  KUKA_INSPIRED_FEATURES.md  KUKA_Navigator_Feature_Audit.md  KUKA_Navigator_User_Guide.md  RESEARCH_INDEX.md  TEST_ARCHITECTURE.md  UI_ROBOT_CATALOG_DESIGN.md  URDF_IPC_DATA_FLOW_FIX.md  URDF_SUPPORT_IMPLEMENTATION_STATUS.md  kuka_kr10_r1420_urdf_analysis.md
firmware/: .gitignore  CMakeLists.txt  STM32H743ZITx_FLASH.ld  arm-none-eabi-gcc.cmake
firmware/App/Inc/: app_tasks.h  cmd_handler.h  drive_control.h  homing.h  input_shaper.h  motion_buffer.h  motion_task.h  net_task.h  ruckig_wrapper.h  safety_monitor.h  scurve_profile.h  status_task.h
firmware/App/Src/: cmd_handler.c  drive_control.c  homing.c  input_shaper.c  motion_buffer.c  motion_task.c  net_task.c  ruckig_wrapper.cpp  safety_monitor.c  scurve_profile.c  status_task.c
firmware/BSP/Inc/: board_config.h  board_flash.h  board_gpio.h  board_timers.h  board_watchdog.h
firmware/BSP/Src/: board_flash.c  board_gpio.c  board_init.c  board_timers.c  board_watchdog.c
firmware/Core/Inc/: FreeRTOSConfig.h  ethernetif.h  lwipopts.h  main.h  stm32h7xx_hal_conf.h
firmware/Core/Src/: ethernetif.c  freertos_hooks.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c  system_stm32h7xx.c
firmware/Drivers/: README.md
firmware/LwIP_Port/Inc/arch/: cc.h  sys_arch.h
firmware/LwIP_Port/Src/: sys_arch.c
firmware/Protocol/Inc/: protocol_commands.h  protocol_defs.h  protocol_packet.h  protocol_status.h
firmware/Protocol/Src/: protocol_packet.c
ressearch_doc_md/: KUKA_Robot_Configuration_Architecture.md  Lập Trình Robot Hàn Chuyên Nghiệp.md  (+14 more)
src/core/: CMakeLists.txt
src/core/include/robot_controller/: core.hpp
src/core/src/: main.cpp
src/core/src/config/: ConfigManager.cpp  ConfigManager.hpp  RobotCatalog.cpp  RobotCatalog.hpp  RobotConfig.hpp  RobotInstance.cpp  RobotInstance.hpp  RobotPackageLoader.cpp  RobotPackageLoader.hpp  RobotPackageSchema.hpp  SystemConfig.hpp  UrdfParser.cpp  UrdfParser.hpp
src/core/src/controller/: RobotController.cpp  RobotController.hpp
src/core/src/firmware/: FirmwareInterface.hpp  FirmwareProtocol.hpp  FirmwareSimulator.cpp  FirmwareSimulator.hpp  IFirmwareDriver.hpp  LegacyGrblProtocol.hpp  MotionStreamer.hpp  RealFirmwareDriver.cpp  RealFirmwareDriver.hpp  STM32EthernetDriver.cpp  STM32EthernetDriver.hpp  SerialPort.hpp
src/core/src/firmware/plugins/: GcodeAdapter.cpp  GcodeAdapter.hpp
src/core/src/firmware/protocol/: BinaryProtocol.hpp  PVTPoint.hpp  PacketTypes.hpp  StatusPacket.hpp
src/core/src/frame/: BaseCalibration.cpp  BaseCalibration.hpp  BaseFrameManager.cpp  BaseFrameManager.hpp  FrameTypes.hpp
src/core/src/homing/: HomingService.cpp  HomingService.hpp  HomingTypes.hpp
src/core/src/interpreter/: AST.hpp  Executor.cpp  Executor.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.hpp
src/core/src/ipc/: BasePayloads.hpp  CatalogPayloads.hpp  HomingPayloads.hpp  IpcServer.cpp  IpcServer.hpp  JogPayloads.cpp  JogPayloads.hpp  Message.hpp  MessageTypes.hpp  ModePayloads.hpp  OverridePayloads.hpp  RobotPackagePayloads.cpp  RobotPackagePayloads.hpp  SeamPayloads.hpp  SensorPayloads.hpp  ToolPayloads.hpp  UrdfPayloads.hpp  WeavePayloads.hpp  WeldingPayloads.hpp
src/core/src/jog/: JogController.cpp  JogController.hpp  RuckigSmoother.cpp  RuckigSmoother.hpp
src/core/src/kinematics/: AnalyticalIK.hpp  AnalyticalKinematics.cpp  AnalyticalKinematics.hpp  DHParameters.hpp  ForwardKinematics.hpp  InverseKinematics.hpp  KDLKinematics.cpp  KDLKinematics.hpp  KinematicsService.hpp  MathTypes.hpp  TwistDecomposition.cpp  TwistDecomposition.hpp  UrdfForwardKinematics.cpp  UrdfForwardKinematics.hpp
src/core/src/logging/: Logger.cpp  Logger.hpp
src/core/src/mode/: ModeManager.cpp  ModeManager.hpp  OperationMode.hpp
src/core/src/override/: OverrideManager.hpp
src/core/src/robot/: DHParameters.hpp  RobotModel.cpp  RobotModel.hpp
src/core/src/state/: IStateMachine.hpp  StateMachine.cpp  StateMachine.hpp  States.hpp
src/core/src/tool/: ToolCalibration.cpp  ToolCalibration.hpp  ToolManager.cpp  ToolManager.hpp  ToolTypes.cpp  ToolTypes.hpp
src/core/src/trajectory/: CartesianInterpolator.cpp  CartesianInterpolator.hpp  DoubleSCurveProfile.cpp  DoubleSCurveProfile.hpp  Interpolators.hpp  LookAheadOptimizer.cpp  LookAheadOptimizer.hpp  TrajectoryExecutor.hpp  TrajectoryPlanner.hpp  TrajectoryTypes.hpp  VelocityProfile.hpp
src/core/src/vision/: HikrobotLaserProfiler.cpp  HikrobotLaserProfiler.hpp  ILaserProfiler.hpp  JointDetector.cpp  JointDetector.hpp  ProfileProcessor.cpp  ProfileProcessor.hpp  SeamTracker.cpp  SeamTracker.hpp  SeamTypes.hpp  SensorManager.cpp  SensorManager.hpp  VisionTypes.hpp
src/core/src/welding/: WeaveExecutor.hpp  WeavePatternGenerator.hpp  WeaveVisualizer.hpp  WeavingTypes.hpp  WeldingController.hpp  WeldingIO.hpp  WeldingStateMachine.hpp  WeldingTypes.hpp
src/core/tests/: test_analytical_kinematics.cpp  test_binary_protocol.cpp  test_cartesian_interpolator.cpp  test_config.cpp  test_core_platform.cpp  test_double_scurve.cpp  test_feature_registry.cpp  test_firmware.cpp  test_firmware_v2.cpp  test_ipc.cpp  test_jog_twa_integration.cpp  test_kdl_kinematics.cpp  test_kinematics.cpp  test_look_ahead.cpp  test_ma2010_critical_geometry.cpp  test_main.cpp  test_motion_controller.cpp  test_ps_threshold_survey.cpp  test_ps_verification.cpp  test_safety.cpp  test_seam.cpp  test_state_machine.cpp  test_tool_frame_jog.cpp  test_tool_jog_zdrift.cpp  test_trajectory.cpp  test_twist_decomposition.cpp  test_urdf_fk.cpp  test_vision.cpp  test_weaving.cpp  test_welding.cpp
(+267 files in other folders)
